--- a/src/main/resources/config/dev.config.properties
+++ b/src/main/resources/config/dev.config.properties
@@ -1,6 +1,6 @@
 #browse=chrome
 headless=false
 incognito=false
-url=https://hr-app-staging.web.app/login
-username=nagalakshmi.panda@loophealth.com
-password=Preatom@14
+url=https://www.amazon.in/
+username=navyasree229@gmail.com
+password=
